First heading added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="resources/CSS/style.css">
   </head>
      <body>
+        <main>
+            <h1>Discover hidden places in the world around you</h1>
   </body>
 
 </html>
