First link added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
      <body>
         <main>
             <h1>Discover hidden places in the world around you</h1>
+            <p>
+                <a href="index.html" class="link">Download Excursion (Coming Soon!)</a>
+            </p> 
   </body>
 
 </html>
