--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <p>
                 <a href="index.html" class="link">Download Excursion (Coming Soon!)</a>
             </p> 
+
+            <video autoplay muted loop>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+            </video>
   </body>
 
 </html>
