--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <video autoplay muted loop>
                 <source src="resources/videos/excursion.mp4" type="video/mp4">
             </video>
+
+            <h2>Your personal travel guide</h2>
   </body>
 
 </html>
