Text under second heading added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </video>
 
             <h2>Your personal travel guide</h2>
+            <p class="p1">Excursion remembers places you like, and recommends new points of interest around you.</p>
   </body>
 
 </html>
