--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 
             <h2>Your personal travel guide</h2>
             <p class="p1">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
+            <img src="resources/images/camp.webp">
+            <br>
+            <br>
+            <img src="resources/images/phone.webp">
   </body>
 
 </html>
