Third heading added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <br>
             <br>
             <img src="resources/images/phone.webp">
+
+            <h3>Coming Soon for iPhone and Android</h3>
   </body>
 
 </html>
