Link added again but under the third heading

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <img src="resources/images/phone.webp">
 
             <h3>Coming Soon for iPhone and Android</h3>
+            <p>
+                <a href="index.html" class="link">Download Excursion (Coming Soon!)</a>
+            </p> 
   </body>
 
 </html>
